--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
     <title>Carousel Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
-    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -20,7 +20,6 @@
     <!-- Custom styles for this template -->
     <link href="styles.css" rel="stylesheet">
 </head>
-<!-- Code's messsy, basic layout for a small project I'm doing. Follow me on twitter @taylorgrendel for free pie!-->
 
 <body>
 <div class="navbar-wrapper">
@@ -29,13 +28,13 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+<!--                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#"><img src="http://rationalwiki.org/w/images/thumb/c/c0/Icon_anonymous.svg/200px-Icon_anonymous.svg.png" height="25"></a>
+                </button> -->
+                <a class="navbar-brand" href="#"><img id="logo" src="assets/osisoft-logo.svg"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -54,7 +53,7 @@
                 </ul>
             </div> -->
              <div id="navbar" class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
+                        <!-- <ul class="nav navbar-nav">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#contact">Contact</a></li>
@@ -70,7 +69,7 @@
                                     <li><a href="#">One more separated link</a></li>
                                 </ul>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -79,51 +78,8 @@
 </div>
 </div>
 
-    <div class="jumbotron">
-        <div class="container">
-            <video autoplay="autoplay" muted="muted" poster="https://www.paypalobjects.com/webstatic/en_US/mktg/wright/home/OneTouchCity_Frame1_dark.jpg" style="width: auto; height: 678px; visibility: visible;">
-                <source src="https://www.paypalobjects.com/webstatic/en_US/mktg/wright/videos/OneTouchCity.mp4" type="video/mp4">
-                    <source src="https://www.paypalobjects.com/webstatic/en_US/mktg/wright/videos/OneTouchCity.webm" type="video/webm">
-            </video>
-        </div>
-    </div>
     <div id="startchange"></div>
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="https://www.nov.com/uploadedImages/Content/Segments/Wellbore_Technologies/Downhole/Intervention_and_Completion_Tools/genericimage5.fw.png?n=4005" alt="..." width="100%">
-                <div class="carousel-caption">
-                    ...
-                </div>
-            </div>
-            <div class="item">
-                <img src="http://i.crackedcdn.com/phpimages/article/1/9/6/393196.jpg?v=1" alt="..." width="100%">
-                <div class="carousel-caption">
-                    ...
-                </div>
-            </div>
-            <div class="item">
-                <img src="http://placehold.it/1200x650" alt="..." width="100%">
-                <div class="carousel-caption">
-                    ...
-                </div>
-            </div>
-        </div>
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-    </div>
+
     <div class="content-block-one">
         <h1>This is a content block</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -162,7 +118,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <!--     <script src="../../assets/js/vendor/holder.min.js"></script> -->
