adds banner and responsive header

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </li>
                 </ul>
             </div> -->
-             <div id="navbar" class="navbar-collapse collapse">
+<!--              <div id="navbar" class="navbar-collapse collapse"> -->
                         <!-- <ul class="nav navbar-nav">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="#about">About</a></li>
@@ -70,16 +70,18 @@
                                 </ul>
                             </li>
                         </ul> -->
-                    </div>
+                    <!-- </div> -->
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
     </nav>
 </div>
 </div>
-
+    <br>
     <div id="startchange"></div>
-
+    <div class="container-fluid">
+        <div class="banner"><img src="assets/banner.png"/></div>
+    </div> 
     <div class="content-block-one">
         <h1>This is a content block</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
