adds responsive banner and headings

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- <link rel="icon" href="../../favicon.ico"> -->
-    <title>Carousel Template for Bootstrap</title>
+    <title>Pi Server</title>
     <!-- Bootstrap core CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -80,7 +80,9 @@
     <br>
     <div id="startchange"></div>
     <div class="container-fluid">
+        <div class="bannerheading1 heading"><p>The Modern PI System</p> </div>
         <div class="banner"><img src="assets/banner.png"/></div>
+        <div class="bannerheading2 heading"><p>Are you ready for the future?</p></div> 
     </div> 
     <div class="content-block-one">
         <h1>This is a content block</h1>
