--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
 </head>
 
 <body>
-<div class="navbar-wrapper">
-    <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar-wrapper">
         <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-<!--                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <!--                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button> -->
-                <a class="navbar-brand" href="#"><img id="logo" src="assets/osisoft-logo.svg"></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <a class="navbar-brand" href="#"><img id="logo" src="assets/osisoft-logo.svg"></a>
+                    </div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Link</a></li>
                     <li class="dropdown">
@@ -52,8 +52,8 @@
                     </li>
                 </ul>
             </div> -->
-<!--              <div id="navbar" class="navbar-collapse collapse"> -->
-                        <!-- <ul class="nav navbar-nav">
+                    <!--              <div id="navbar" class="navbar-collapse collapse"> -->
+                    <!-- <ul class="nav navbar-nav">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#contact">Contact</a></li>
@@ -71,19 +71,23 @@
                             </li>
                         </ul> -->
                     <!-- </div> -->
-            <!-- /.navbar-collapse -->
+                    <!-- /.navbar-collapse -->
+                </div>
+                <!-- /.container-fluid -->
+            </nav>
         </div>
-        <!-- /.container-fluid -->
-    </nav>
-</div>
-</div>
-    <br>
-    <div id="startchange"></div>
-    <div class="container-fluid">
-        <div class="bannerheading1 heading"><p>The Modern PI System</p> </div>
-        <div class="banner"><img src="assets/banner.png"/></div>
-        <div class="bannerheading2 heading"><p>Are you ready for the future?</p></div> 
-    </div> 
+    </div>
+    <div class="banner-container">
+<!--         <div class="row"> -->
+            <div class="bannerheading1 heading">
+                <p>The Modern PI System</p>
+            </div>
+            <div class="banner"><img src="assets/banner.png" /></div>
+            <div class="bannerheading2 heading">
+                <p>Are you ready for the future?</p>
+            </div>
+<!--         </div> -->
+    </div>
     <div class="content-block-one">
         <h1>This is a content block</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -97,26 +101,26 @@
             <p>Other information can go here</p>
         </div>
     </div>
-    <div class="content-block-one">
-        <h1>This is a content block</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <div class="content-space-two content">
-        <div class="text-center">
-            <h1>This separates content!</h1>
-            <div class="page-break"></div>
-            <p>Other information can go here</p>
+    <div class="footer">
+        <div class="image-links">
+            <ul class="social">
+                <li class="social_twitter">
+                    <a href="https://twitter.com/OSIsoft" target="_blank"></a>
+                </li>
+                <li class="social_facebook">
+                    <a href="http://www.facebook.com/OSIsoft" target="_blank"></a>
+                </li>
+                <li class="social_linkedin">
+                    <a href="http://www.linkedin.com/company/osisoft" target="_blank"></a>
+                </li>
+                <li class="social_users">
+                    <a href="http://community.osisoft.com/" target="_blank"></a>
+                </li>
+            </ul>
         </div>
     </div>
-    <div class="content-block-one">
-        <h1>This is a content block</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
+    <div class="clear"></div>
+
     <!-- /.container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
