adds banner heading fonts and media queries

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <![endif]-->
     <!-- Custom styles for this template -->
     <link href="styles.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -78,15 +79,15 @@
         </div>
     </div>
     <div class="banner-container">
-<!--         <div class="row"> -->
-            <div class="bannerheading1 heading">
-                <p>The Modern PI System</p>
-            </div>
-            <div class="banner"><img src="assets/banner.png" /></div>
-            <div class="bannerheading2 heading">
-                <p>Are you ready for the future?</p>
-            </div>
-<!--         </div> -->
+        <div class="bannerheading1 heading">
+            <p>The Modern
+                <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr>
+            </p>
+        </div>
+        <div class="banner"><img src="assets/banner.png" /></div>
+        <div class="bannerheading2 heading">
+            <p>Are you ready for the future?</p>
+        </div>
     </div>
     <div class="content-block-one">
         <h1>This is a content block</h1>
@@ -94,6 +95,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
+
     <div class="content-space-one content">
         <div class="text-center">
             <h1>This separates content!</h1>
@@ -120,7 +122,6 @@
         </div>
     </div>
     <div class="clear"></div>
-
     <!-- /.container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
