fixes x-direction overscroll issue

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </nav>
         </div>
     </div>
-    <div class="banner-container">
+    <div class="container-fluid">
         <div class="bannerheading1 heading">
             <p>The Modern
                 <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr>
@@ -95,7 +95,38 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
-
+    <br>
+    <div class="flex-container">
+        <div class="tiles t1">
+            <div class="icon"><img src="assets/icon-target.png" /></div>
+            <div class="content">
+                <p>Are you ready to forecast demand and meet production targets?</p>
+                <div class="button">Hear about California ISO's experience</div>
+            </div>
+        </div>
+        <div class="tiles t2">
+            <div class="icon"><img src="assets/icon-clipboard.png" /></div>
+            <div class="content">
+                <p>Are you ready to forecast demand and meet production targets?</p>
+                <div class="button">Hear about California ISO's experience</div>
+            </div>
+        </div>
+        <div class="tiles t3">
+            <div class="icon"><img src="assets/icon-stopwatch.png" /></div>
+            <div class="content">
+                <p>Are you ready to forecast demand and meet production targets?</p>
+                <div class="button">Hear about California ISO's experience</div>
+            </div>
+        </div>
+        <div class="tiles t4">
+            <div class="icon"><img src="assets/icon-lock.png" /></div>
+            <div class="content">
+                <p>Are you ready to forecast demand and meet production targets?</p>
+                <div class="button">Hear about California ISO's experience</div>
+            </div>
+        </div>
+    </div>
+    <br>
     <div class="content-space-one content">
         <div class="text-center">
             <h1>This separates content!</h1>
