adds responsive flexbox tiles

--- a/index.html
+++ b/index.html
@@ -96,36 +96,30 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <br>
-    <div class="flex-container">
-        <div class="tiles t1">
-            <div class="icon"><img src="assets/icon-target.png" /></div>
-            <div class="content">
+<!--     <div class="grid"> -->
+        <div class="flex-container">
+            <div class="tiles t1">
+                <div class="icon"><img src="assets/icon-target.png" /></div>
+                <p>Are you ready to forecast demand and meet production targets?</p>
+                <div class="button">Hear about California ISO's experience</div>
+            </div>
+            <div class="tiles t2">
+                <div class="icon"><img src="assets/icon-clipboard.png" /></div>
+                <p>Are you ready to forecast demand and meet production targets?</p>
+                <div class="button">Hear about California ISO's experience</div>
+            </div>
+            <div class="tiles t3">
+                <div class="icon"><img src="assets/icon-stopwatch.png" /></div>
+                <p>Are you ready to forecast demand and meet production targets?</p>
+                <div class="button">Hear about California ISO's experience</div>
+            </div>
+            <div class="tiles t4">
+                <div class="icon"><img src="assets/icon-lock.png" /></div>
                 <p>Are you ready to forecast demand and meet production targets?</p>
                 <div class="button">Hear about California ISO's experience</div>
             </div>
         </div>
-        <div class="tiles t2">
-            <div class="icon"><img src="assets/icon-clipboard.png" /></div>
-            <div class="content">
-                <p>Are you ready to forecast demand and meet production targets?</p>
-                <div class="button">Hear about California ISO's experience</div>
-            </div>
-        </div>
-        <div class="tiles t3">
-            <div class="icon"><img src="assets/icon-stopwatch.png" /></div>
-            <div class="content">
-                <p>Are you ready to forecast demand and meet production targets?</p>
-                <div class="button">Hear about California ISO's experience</div>
-            </div>
-        </div>
-        <div class="tiles t4">
-            <div class="icon"><img src="assets/icon-lock.png" /></div>
-            <div class="content">
-                <p>Are you ready to forecast demand and meet production targets?</p>
-                <div class="button">Hear about California ISO's experience</div>
-            </div>
-        </div>
-    </div>
+<!--     </div> -->
     <br>
     <div class="content-space-one content">
         <div class="text-center">
