adds responsive flexbox layouts to tiles

--- a/index.html
+++ b/index.html
@@ -107,29 +107,51 @@
                     </section>
                     <section class="button">
                         <p>Hear about California ISO's experience</p>
+                        <img src="assets/arrow-single.png" />
                     </section>
                 </div>
             </div>
         </div>
         <div class="tiles t2">
-            <div class="icon"><img src="assets/icon-clipboard.png" /></div>
-            <p>Are you ready to forecast demand and meet production targets?</p>
-            <div class="button">
-                <p>Hear about California ISO's experience</p>
+            <div class="inner-flex">
+                <div class="icon"><img src="assets/icon-clipboard.png" /></div>
+                <div class="tile-text">
+                    <section class="desc">
+                        <p>Are you ready to forecast demand and meet production targets?</p>
+                    </section>
+                    <section class="button">
+                        <p>Hear about California ISO's experience</p>
+                        <img src="assets/arrow-single.png" />
+                    </section>
+                </div>
             </div>
         </div>
         <div class="tiles t3">
-            <div class="icon"><img src="assets/icon-stopwatch.png" /></div>
-            <p>Are you ready to forecast demand and meet production targets?</p>
-            <div class="button">
-                <p>Hear about California ISO's experience</p>
+            <div class="inner-flex">
+                <div class="icon"><img src="assets/icon-stopwatch.png" /></div>
+                <div class="tile-text">
+                    <section class="desc">
+                        <p>Are you ready to forecast demand and meet production targets?</p>
+                    </section>
+                    <section class="button">
+                        <p>Hear about California ISO's experience</p>
+                        <img src="assets/arrow-single.png" />
+                    </section>
+                </div>
             </div>
         </div>
         <div class="tiles t4">
-            <div class="icon"><img src="assets/icon-lock.png" /></div>
-            <p>Are you ready to forecast demand and meet production targets?</p>
-            <div class="button">
-                <p>Hear about California ISO's experience</p>
+            <div class="inner-flex">
+                <div class="icon"><img src="assets/icon-lock.png" /></div>
+                <div class="tile-text">
+                    <section class="desc">
+                        <p>Are you ready to forecast demand and meet production targets?</p>
+                    </section>
+                    <section class="button">
+                        <p>Hear about California ISO's experience</p>
+                        <img src="assets/arrow-single.png" />
+                    </section>
+                </div>
             </div>
         </div>
     </div>
