adds strip buttons

--- a/index.html
+++ b/index.html
@@ -80,20 +80,23 @@
     </div>
     <div class="container-fluid">
         <div class="bannerheading1 heading">
-            <p>The Modern
-                <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr>
-            </p>
-        </div>
-        <div class="banner"><img src="assets/banner.png" /></div>
-        <div class="bannerheading2 heading">
-            <p>Are you ready for the future?</p>
+                <p>The Modern
+                    <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr>
+                </p>
+            </div>
+            <div class="banner"><img src="assets/banner.png" /></div>
+            <div class="bannerheading2 heading">
+                <p>Are you ready for the future?</p>
+            </div>
         </div>
     </div>
     <div class="content-block-one">
-        <h1>This is a content block</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="content-container">
+            <h1>This is a content block</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
     </div>
     <br>
     <!--     <div class="grid"> -->
@@ -152,6 +155,16 @@
                         <img src="assets/arrow-single.png" />
                     </section>
                 </div>
+            </div>
+        </div>
+        <div class="strips-container">
+            <div class="strips strip1">
+                <p>Access the latest software</p>
+                <img src="assets/arrow-double.png"/>
+            </div>
+            <div class="strips strip2">
+                <p>Get information about professional services</p>
+                <img src="assets/arrow-double.png"/>                
             </div>
         </div>
     </div>
