adds mockup color scheme

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <br>
     <!--     <div class="grid"> -->
     <div class="flex-container">
-        <div class="tiles t1">
+        <div class="tiles trans t1">
             <div class="inner-flex">
                 <div class="icon"><img src="assets/icon-target.png" /></div>
                 <div class="tile-text">
@@ -115,54 +115,54 @@
                 </div>
             </div>
         </div>
-        <div class="tiles t2">
+        <div class="tiles trans t2">
             <div class="inner-flex">
                 <div class="icon"><img src="assets/icon-clipboard.png" /></div>
                 <div class="tile-text">
                     <section class="desc">
-                        <p>Are you ready to forecast demand and meet production targets?</p>
+                        <p>Are you ready to manage more assets and bigger projects</p>
                     </section>
                     <section class="button">
-                        <p>Hear about California ISO's experience</p>
+                        <p>Maximaize your potential with PI Server 2015</p>
                         <img src="assets/arrow-single.png" />
                     </section>
                 </div>
             </div>
         </div>
-        <div class="tiles t3">
+        <div class="tiles trans t3">
             <div class="inner-flex">
                 <div class="icon"><img src="assets/icon-stopwatch.png" /></div>
                 <div class="tile-text">
                     <section class="desc">
-                        <p>Are you ready to forecast demand and meet production targets?</p>
+                        <p>Are you ready to improve efficiency and reduce downtime?</p>
                     </section>
                     <section class="button">
-                        <p>Hear about California ISO's experience</p>
+                        <p>Get customized coaching</p>
                         <img src="assets/arrow-single.png" />
                     </section>
                 </div>
             </div>
         </div>
-        <div class="tiles t4">
+        <div class="tiles trans t4">
             <div class="inner-flex">
                 <div class="icon"><img src="assets/icon-lock.png" /></div>
                 <div class="tile-text">
                     <section class="desc">
-                        <p>Are you ready to forecast demand and meet production targets?</p>
+                        <p>Are you ready if there is a cyber attack?</p>
                     </section>
                     <section class="button">
-                        <p>Hear about California ISO's experience</p>
+                        <p>View best practices in security</p>
                         <img src="assets/arrow-single.png" />
                     </section>
                 </div>
             </div>
         </div>
         <div class="strips-container">
-            <div class="strips strip1">
+            <div class="strips trans strip1">
                 <p>Access the latest software</p>
                 <img src="assets/arrow-double.png"/>
             </div>
-            <div class="strips strip2">
+            <div class="strips trans strip2">
                 <p>Get information about professional services</p>
                 <img src="assets/arrow-double.png"/>                
             </div>
