adds links and assets, default anchor tag style override and code clean up

--- a/index.html
+++ b/index.html
@@ -27,68 +27,24 @@
         <div class="container-fluid">
             <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
                 <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                        <!--                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button> -->
                         <a class="navbar-brand" href="#"><img id="logo" src="assets/osisoft-logo.svg"></a>
                     </div>
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div> -->
-                    <!--              <div id="navbar" class="navbar-collapse collapse"> -->
-                    <!-- <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li class="dropdown-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li>
-                        </ul> -->
-                    <!-- </div> -->
-                    <!-- /.navbar-collapse -->
                 </div>
-                <!-- /.container-fluid -->
             </nav>
         </div>
     </div>
     <div class="container-fluid">
         <div class="bannerheading1 heading">
-                <p>The Modern
-                    <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr>
-                </p>
-            </div>
-            <div class="banner"><img src="assets/banner.png" /></div>
-            <div class="bannerheading2 heading">
-                <p>Are you ready for the future?</p>
-            </div>
+            <p>The Modern
+                <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr>
+            </p>
         </div>
+        <div class="banner"><img src="assets/banner.png" /></div>
+        <div class="bannerheading2 heading">
+            <p>Are you ready for the future?</p>
+        </div>
+    </div>
     </div>
     <div class="content-block-one">
         <div class="content-container">
@@ -99,7 +55,6 @@
         </div>
     </div>
     <br>
-    <!--     <div class="grid"> -->
     <div class="flex-container">
         <div class="tiles trans t1">
             <div class="inner-flex">
@@ -120,7 +75,7 @@
                 <div class="icon"><img src="assets/icon-clipboard.png" /></div>
                 <div class="tile-text">
                     <section class="desc">
-                        <p>Are you ready to manage more assets and bigger projects</p>
+                        <p>Are you ready to manage more assets and bigger projects?</p>
                     </section>
                     <section class="button">
                         <p>Maximaize your potential with PI Server 2015</p>
@@ -130,66 +85,62 @@
             </div>
         </div>
         <div class="tiles trans t3">
-            <div class="inner-flex">
-                <div class="icon"><img src="assets/icon-stopwatch.png" /></div>
-                <div class="tile-text">
-                    <section class="desc">
-                        <p>Are you ready to improve efficiency and reduce downtime?</p>
-                    </section>
-                    <section class="button">
-                        <p>Get customized coaching</p>
-                        <img src="assets/arrow-single.png" />
-                    </section>
+            <a href="assets/BR_Asset Jumpstart_LT_EN.pdf">
+                <div class="inner-flex">
+                    <div class="icon"><img src="assets/icon-stopwatch.png" /></div>
+                    <div class="tile-text">
+                        <section class="desc">
+                            <p>Are you ready to improve efficiency and reduce downtime?</p>
+                        </section>
+                        <section class="button">
+                            <p>Get customized coaching</p>
+                            <img src="assets/arrow-single.png" />
+                        </section>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="tiles trans t4">
-            <div class="inner-flex">
-                <div class="icon"><img src="assets/icon-lock.png" /></div>
-                <div class="tile-text">
-                    <section class="desc">
-                        <p>Are you ready if there is a cyber attack?</p>
-                    </section>
-                    <section class="button">
-                        <p>View best practices in security</p>
-                        <img src="assets/arrow-single.png" />
-                    </section>
+            <a href="https://techsupport.osisoft.com/Troubleshooting/KB/KB00833">
+                <div class="inner-flex">
+                    <div class="icon"><img src="assets/icon-lock.png" /></div>
+                    <div class="tile-text">
+                        <section class="desc">
+                            <p>Are you ready if there is a cyber attack?</p>
+                        </section>
+                        <section class="button">
+                            <p>View best practices in security</p>
+                            <img src="assets/arrow-single.png" />
+                        </section>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="strips-container">
             <div class="strips trans strip1">
                 <p>Access the latest software</p>
-                <img src="assets/arrow-double.png"/>
+                <img src="assets/arrow-double.png" />
             </div>
             <div class="strips trans strip2">
                 <p>Get information about professional services</p>
-                <img src="assets/arrow-double.png"/>                
+                <img src="assets/arrow-double.png" />
             </div>
         </div>
     </div>
-    <!--     </div> -->
     <br>
-    <div class="content-space-one content">
-        <div class="text-center">
-            <h1>This separates content!</h1>
-            <div class="page-break"></div>
-            <p>Other information can go here</p>
-        </div>
-    </div>
     <div class="footer">
         <div class="image-links">
             <ul class="social">
-                <li class="social_twitter">
+                <li class="social_twitter trans">
                     <a href="https://twitter.com/OSIsoft" target="_blank"></a>
                 </li>
-                <li class="social_facebook">
+                <li class="social_facebook trans">
                     <a href="http://www.facebook.com/OSIsoft" target="_blank"></a>
                 </li>
-                <li class="social_linkedin">
+                <li class="social_linkedin trans">
                     <a href="http://www.linkedin.com/company/osisoft" target="_blank"></a>
                 </li>
-                <li class="social_users">
+                <li class="social_users trans">
                     <a href="http://community.osisoft.com/" target="_blank"></a>
                 </li>
             </ul>
