adds footer links and style clean up

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
     </div>
     <br>
     <div class="footer">
+        <div class="links">
+            <span>© 2015 OSIsoft</span> <span>|</span> <a href="http://www.osisoft.com">osisoft.com</a> <span>|</span> <a href="http://www.osisoft.com/home/Privacy_Policy.aspx">Privacy</a>
+        </div>
         <div class="image-links">
             <ul class="social">
                 <li class="social_twitter trans">
