--- a/index.html
+++ b/index.html
@@ -23,130 +23,143 @@
 </head>
 
 <body>
-    <div class="navbar-wrapper">
-        <div class="container-fluid">
-            <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="#"><img id="logo" src="assets/osisoft-logo.svg"></a>
-                    </div>
-                </div>
-            </nav>
+    <!-- <div class="navbar-wrapper"> -->
+    <!-- <div class="container-fluid"> -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#"><img id="logo" src="assets/osisoft-logo.svg"></a>
+            </div>
         </div>
-    </div>
-    <div class="container-fluid">
-        <div class="bannerheading1 heading">
-            <p>The Modern
-                <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr>
-            </p>
+    </nav>
+    <!-- </div> -->
+    <!-- </div> -->
+    <div class="container-fluid bannerbg">
+        <div class="container">
+            <!--         <div class="bannerheading1 heading">
+                <p>The Modern
+                    <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr>
+                </p>
+            </div> -->
+            <div class="banner">
+                <img src="assets/microsite-banner.png" />
+            </div>
+            <!--         <div class="bannerheading2 heading">
+                <p>Are you ready for the future?</p>
+            </div> -->
         </div>
-        <div class="banner"><img src="assets/banner.png" /></div>
-        <div class="bannerheading2 heading">
-            <p>Are you ready for the future?</p>
-        </div>
-    </div>
     </div>
     <div class="content-block-one">
-        <div class="content-container">
-            <h1>This is a content block</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="container">
+            <p>The modern PI Server is much more than just a historian. Since 2012, every release has helped you transform data into actionable information. In addition to storing time-series data in the PI Data Archive, the PI Server also enables you to bridge across your assets and business databases with the inclusion of PI Asset Framework; calculate key performance indicators and aggregation metrics with Asset Analytics; auto-track key events and excursions with Event Frames; and do all this with out-of-the-box capabilities that can be leveraged within the integrated PI System infrastructure. </p>
+            <p>With the latest set of 2015 releases and native support for future data, you can capture, analyze, and share predictions and forecasts easily and seamlessly throughout the organization to anticipate risks and drive toward targets.</p>
         </div>
     </div>
     <br>
-    <div class="flex-container">
-        <div class="tiles trans t1">
-            <div class="inner-flex">
-                <div class="icon"><img src="assets/icon-target.png" /></div>
-                <div class="tile-text">
-                    <section class="desc">
-                        <p>Are you ready to forecast demand and meet production targets?</p>
-                    </section>
-                    <section class="button">
-                        <p>Hear about California ISO's experience</p>
-                        <img src="assets/arrow-single.png" />
-                    </section>
-                </div>
-            </div>
-        </div>
-        <div class="tiles trans t2">
-            <div class="inner-flex">
-                <div class="icon"><img src="assets/icon-clipboard.png" /></div>
-                <div class="tile-text">
-                    <section class="desc">
-                        <p>Are you ready to manage more assets and bigger projects?</p>
-                    </section>
-                    <section class="button">
-                        <p>Maximaize your potential with PI Server 2015</p>
-                        <img src="assets/arrow-single.png" />
-                    </section>
-                </div>
-            </div>
-        </div>
-        <div class="tiles trans t3">
-            <a href="assets/BR_Asset Jumpstart_LT_EN.pdf">
-                <div class="inner-flex">
-                    <div class="icon"><img src="assets/icon-stopwatch.png" /></div>
-                    <div class="tile-text">
-                        <section class="desc">
-                            <p>Are you ready to improve efficiency and reduce downtime?</p>
-                        </section>
-                        <section class="button">
-                            <p>Get customized coaching</p>
-                            <img src="assets/arrow-single.png" />
-                        </section>
+    <div class="container">
+        <div class="flex-container">
+            <div class="tiles trans t1">
+                <a href="https://osisoftconferencemedia.blob.core.windows.net/produced/Internal/Marketing/CAISO 3rd Draft Rebuilt v.9.mp4">
+                    <div class="inner-flex">
+                        <div class="icon"><img src="assets/icon-target.png" /></div>
+                        <div class="tile-text">
+                            <section class="desc">
+                                <p>Are you ready to forecast demand and meet production targets?</p>
+                            </section>
+                            <section class="button">
+                                <p>Hear about California ISO's experience</p>
+                                <img src="assets/arrow-single.png" />
+                            </section>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </div>
-        <div class="tiles trans t4">
-            <a href="https://techsupport.osisoft.com/Troubleshooting/KB/KB00833">
-                <div class="inner-flex">
-                    <div class="icon"><img src="assets/icon-lock.png" /></div>
-                    <div class="tile-text">
-                        <section class="desc">
-                            <p>Are you ready if there is a cyber attack?</p>
-                        </section>
-                        <section class="button">
-                            <p>View best practices in security</p>
-                            <img src="assets/arrow-single.png" />
-                        </section>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="strips-container">
-            <div class="strips trans strip1">
-                <p>Access the latest software</p>
-                <img src="assets/arrow-double.png" />
+                </a>
             </div>
-            <div class="strips trans strip2">
-                <p>Get information about professional services</p>
-                <img src="assets/arrow-double.png" />
+            <div class="tiles trans t2">
+                <a href="assets/TopTen_LT_EN_Final.pdf">
+                    <div class="inner-flex">
+                        <div class="icon"><img src="assets/icon-clipboard.png" /></div>
+                        <div class="tile-text">
+                            <section class="desc">
+                                <p>Are you ready to manage more assets and bigger projects?</p>
+                            </section>
+                            <section class="button">
+                                <p>Maximaize your potential with PI Server 2015</p>
+                                <img src="assets/arrow-single.png" />
+                            </section>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="tiles trans t3">
+                <a href="assets/BR_Asset Jumpstart_LT_EN.pdf">
+                    <div class="inner-flex">
+                        <div class="icon"><img src="assets/icon-stopwatch.png" /></div>
+                        <div class="tile-text">
+                            <section class="desc">
+                                <p>Are you ready to improve efficiency and reduce downtime?</p>
+                            </section>
+                            <section class="button">
+                                <p>Get customized coaching</p>
+                                <img src="assets/arrow-single.png" />
+                            </section>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="tiles trans t4">
+                <a href="https://techsupport.osisoft.com/Troubleshooting/KB/KB00833">
+                    <div class="inner-flex">
+                        <div class="icon"><img src="assets/icon-lock.png" /></div>
+                        <div class="tile-text">
+                            <section class="desc">
+                                <p>Are you ready if there is a cyber attack?</p>
+                            </section>
+                            <section class="button">
+                                <p>View best practices in security</p>
+                                <img src="assets/arrow-single.png" />
+                            </section>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="strips-container">
+                <div class="strips trans strip1">
+                    <a href="https://techsupport.osisoft.com/Products/">
+                        <p>Access the latest software</p>
+                        <img src="assets/arrow-double.png" />
+                    </a>
+                </div>
+                <div class="strips trans strip2">
+                    <a href="http://pages.osisoft.com/Modern-PI-System.html">
+                        <p>Get information about professional services</p>
+                        <img src="assets/arrow-double.png" />
+                    </a>
+                </div>
             </div>
         </div>
     </div>
     <br>
     <div class="footer">
-        <div class="links">
-            <span>© 2015 OSIsoft</span> <span>|</span> <a href="http://www.osisoft.com">osisoft.com</a> <span>|</span> <a href="http://www.osisoft.com/home/Privacy_Policy.aspx">Privacy</a>
-        </div>
-        <div class="image-links">
-            <ul class="social">
-                <li class="social_twitter trans">
-                    <a href="https://twitter.com/OSIsoft" target="_blank"></a>
-                </li>
-                <li class="social_facebook trans">
-                    <a href="http://www.facebook.com/OSIsoft" target="_blank"></a>
-                </li>
-                <li class="social_linkedin trans">
-                    <a href="http://www.linkedin.com/company/osisoft" target="_blank"></a>
-                </li>
-                <li class="social_users trans">
-                    <a href="http://community.osisoft.com/" target="_blank"></a>
-                </li>
-            </ul>
+        <div class="container">
+            <div class="links">
+                <span>© 2015 OSIsoft</span> <span>|</span> <a href="http://www.osisoft.com">osisoft.com</a> <span>|</span> <a href="http://www.osisoft.com/home/Privacy_Policy.aspx">Privacy</a>
+            </div>
+            <div class="image-links">
+                <ul class="social">
+                    <li class="social_twitter trans">
+                        <a href="https://twitter.com/OSIsoft" target="_blank"></a>
+                    </li>
+                    <li class="social_facebook trans">
+                        <a href="http://www.facebook.com/OSIsoft" target="_blank"></a>
+                    </li>
+                    <li class="social_linkedin trans">
+                        <a href="http://www.linkedin.com/company/osisoft" target="_blank"></a>
+                    </li>
+                    <li class="social_users trans">
+                        <a href="http://community.osisoft.com/" target="_blank"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="clear"></div>
