changes link to youtube and tile content

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="container">
         <div class="flex-container">
             <div class="tiles trans t1">
-                <a href="https://osisoftconferencemedia.blob.core.windows.net/produced/Internal/Marketing/CAISO 3rd Draft Rebuilt v.9.mp4">
+                <a href="https://www.youtube.com/watch?v=WLrzbSj7-fs">
                     <div class="inner-flex">
                         <div class="icon"><img src="assets/icon-target.png" /></div>
                         <div class="tile-text">
@@ -80,10 +80,10 @@
                         <div class="icon"><img src="assets/icon-clipboard.png" /></div>
                         <div class="tile-text">
                             <section class="desc">
-                                <p>Are you ready to manage more assets and bigger projects?</p>
+                                <p>Are you ready to manage more assets and new projects?</p>
                             </section>
                             <section class="button">
-                                <p>Maximaize your potential with PI Server 2015</p>
+                                <p>Use the latest capabilities</p>
                                 <img src="assets/arrow-single.png" />
                             </section>
                         </div>
