--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
     </div>
     <div class="content-block-one">
         <div class="container">
-            <h1>PI Server 2015: More than just a historian</h1>
-            <p>Introducing the latest in data infrastructure, PI Server 2015 enables improved decision-making with context and standardization, analyses, events, and now predictive data that can be leveraged throughout the integrated PI System environment. See what the latest capabilities can do for you and learn why now is a great time to plan your upgrades.
+            <h2><span class="pi-server-h2">PI Server 2015: More than just a historian</span></h2>
+            <p>Introducing the latest in data infrastructure, PI Server 2015 enables improved decision-making with context and standardization, analyses, events, and now predictive data that can be leveraged throughout the integrated PI System environment.</p> 
+            <p>See what the latest capabilities can do for you and learn why now is a great time to plan your upgrades.
             </p>
             <!-- <p>The modern PI Server is much more than just a historian. Since 2012, every release has helped you transform data into actionable information. In addition to storing time-series data in the PI Data Archive, the PI Server also enables you to bridge across your assets and business databases with the inclusion of PI Asset Framework; calculate key performance indicators and aggregation metrics with Asset Analytics; auto-track key events and excursions with Event Frames; and do all this with out-of-the-box capabilities that can be leveraged within the integrated PI System infrastructure. </p> -->
-            <p>With the latest set of 2015 releases and native support for future data, you can capture, analyze, and share predictions and forecasts easily and seamlessly throughout the organization to anticipate risks and drive toward targets.</p>
+            <!-- <p>With the latest set of 2015 releases and native support for future data, you can capture, analyze, and share predictions and forecasts easily and seamlessly throughout the organization to anticipate risks and drive toward targets.</p> -->
         </div>
     </div>
     <br>
