adds responsive banner

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- <link rel="icon" href="../../favicon.ico"> -->
-    <title>PI Server</title>
+    <title>Modern PI System</title>
     <!-- Bootstrap core CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -36,17 +36,18 @@
     <!-- </div> -->
     <div class="container-fluid bannerbg">
         <div class="container">
-            <!--         <div class="bannerheading1 heading">
+                <div class="bannerheading1 heading">
                 <p>The Modern
                     <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr>
                 </p>
-            </div> -->
-            <div class="banner">
-                <img src="assets/microsite-banner.png" />
             </div>
-            <!--         <div class="bannerheading2 heading">
+            <!-- <p><span class="abso">The Modern PI System</span></p> -->
+            <div class="banner">
+                <img src="assets/modern-piserver-blank.png" />
+            </div>
+            <div class="bannerheading2 heading">
                 <p>Are you ready for the future?</p>
-            </div> -->
+            </div>
         </div>
     </div>
     <div class="content-block-one">
@@ -55,8 +56,6 @@
             <p>Introducing the latest in data infrastructure, PI Server 2015 enables improved decision-making with context and standardization, analyses, events, and now predictive data that can be leveraged throughout the integrated PI System environment.</p> 
             <p>See what the latest capabilities can do for you and learn why now is a great time to plan your upgrades.
             </p>
-            <!-- <p>The modern PI Server is much more than just a historian. Since 2012, every release has helped you transform data into actionable information. In addition to storing time-series data in the PI Data Archive, the PI Server also enables you to bridge across your assets and business databases with the inclusion of PI Asset Framework; calculate key performance indicators and aggregation metrics with Asset Analytics; auto-track key events and excursions with Event Frames; and do all this with out-of-the-box capabilities that can be leveraged within the integrated PI System infrastructure. </p> -->
-            <!-- <p>With the latest set of 2015 releases and native support for future data, you can capture, analyze, and share predictions and forecasts easily and seamlessly throughout the organization to anticipate risks and drive toward targets.</p> -->
         </div>
     </div>
     <br>
