adds final styles

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <!-- </div> -->
     <!-- </div> -->
     <div class="container-fluid bannerbg">
-        <div class="container">
+        <div class="container bc">
                 <div class="bannerheading1 heading">
-                <p>The Modern
-                    <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr>
+                <p>The Modern PI System
+                  <!--   <abbr title="The PI System is a suite of software products that are used for data collection, historicizing, finding, analyzing, delivering, and visualizing. It is marketed as an enterprise infrastructure for management of real-time data and events." class="initialism">PI System</abbr> -->
                 </p>
             </div>
             <!-- <p><span class="abso">The Modern PI System</span></p> -->
