adds finishing touches and latest assets

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="flex-container">
             <div class="tiles trans t1">
-                <a href="https://www.youtube.com/watch?v=WLrzbSj7-fs">
+                <a href="https://www.youtube.com/watch?v=0MglijxFCcM">
                     <div class="inner-flex">
                         <div class="icon"><img src="assets/icon-target.png" /></div>
                         <div class="tile-text">
@@ -70,7 +70,7 @@
                                 <p>Are you ready to forecast demand and meet production targets?</p>
                             </section>
                             <section class="button">
-                                <p>Hear about California ISO's experience</p>
+                                <p><!-- Hear about California ISO's experience -->Learn about future data</p>
                                 <img src="assets/arrow-single.png" />
                             </section>
                         </div>
@@ -78,7 +78,7 @@
                 </a>
             </div>
             <div class="tiles trans t2">
-                <a href="assets/TopTen_LT_EN_Final.pdf">
+                <a href="assets/TopTen_LT_EN.pdf">
                     <div class="inner-flex">
                         <div class="icon"><img src="assets/icon-clipboard.png" /></div>
                         <div class="tile-text">
@@ -115,7 +115,7 @@
                         <div class="icon"><img src="assets/icon-lock.png" /></div>
                         <div class="tile-text">
                             <section class="desc">
-                                <p>Are you ready if there is a cyber attack?</p>
+                                <p>Are you ready for cyber threats?</p>
                             </section>
                             <section class="button">
                                 <p>View best practices in security</p>
